<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewExpense"
    android:padding="10dp"
    android:background="@color/app_background"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:cardCornerRadius="6dp"
        android:elevation="6dp"
        app:cardBackgroundColor="@color/card_background"
        android:layout_marginTop="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/et_expense_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expense_title"
                android:inputType="text"
                android:maxLines="1"/>
            <EditText
                android:id="@+id/et_expense_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expense_amt"
                android:text="0"
                android:inputType="numberDecimal"
                android:maxLines="1"/>
            <EditText
                android:id="@+id/et_expense_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expense_description"
                android:inputType="text"
                android:maxLines="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spinner_text"
                    android:textSize="16sp"
                    android:layout_weight="1"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_category"
                    android:layout_gravity="start"
                    android:layout_weight="1"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_category"
                android:backgroundTint="@color/button_background"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>